fix: add missing margin and padding rules, remove duplicated one

--- a/scss/base/_spacing.scss
+++ b/scss/base/_spacing.scss
@@ -132,9 +132,6 @@
         margin-bottom: calc(#{$i}rem / 2);
         margin-top: calc(#{$i}rem / 2);
     }
-    .m-#{$i}-half {
-        margin: calc(#{$i}rem / 2);
-    }
     .p-#{$i}-half {
         padding: calc(#{$i}rem / 2);
     }
@@ -155,6 +152,9 @@
         padding-bottom: calc(#{$i}rem / 2);
         padding-top: calc(#{$i}rem / 2);
     }
+    .m-#{$i} {
+        margin: #{$i}rem;
+    }
     .mb-#{$i} {
         margin-bottom: #{$i}rem;
     }
@@ -174,6 +174,9 @@
     .my-#{$i} {
         margin-bottom: #{$i}rem;
         margin-top: #{$i}rem;
+    }
+    .p-#{$i} {
+        padding: #{$i}rem;
     }
     .pb-#{$i} {
         padding-bottom: #{$i}rem;
